--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,19 @@
     <meta name="og:type" content="website">
     
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>img/icon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>img/icon/favicon-32x32.png">
+
+    <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>img/icon/apple-touch-icon/60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= BASE_URL %>img/icon/apple-touch-icon/76x76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>img/icon/apple-touch-icon/120x120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>img/icon/apple-touch-icon/152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/icon/apple-touch-icon/180x180.png">
+
+    <link rel="mask-icon" href="<%= BASE_URL %>img/icon/safari-pinned-tab.svg" color="#5bbad5">
+
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="theme-color" content="#ffffff">
 
     <title>TokPet's App | Pets Accesories & GPS Tracking</title>
 
